dnl Process this file with autoconf to produce a configure script.
AC_INIT(memwatch.c)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(libmemwatch, ["2.65"])

dnl Checks for programs.
AC_PROG_CC
AM_PROG_LIBTOOL

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(limits.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_TYPE_SIGNAL
AC_FUNC_VPRINTF

AC_OUTPUT(Makefile)
